--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,8 @@ input {
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #9752cc;
+  text-shadow:0px 1px 0px #9752cc;
+  margin: 10px;
 }
 .addButton:hover {
 	background:linear-gradient(to bottom, #bc80ea 5%, #dfbdfa 100%);
@@ -195,7 +196,8 @@ input {
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #528ecc;
+  text-shadow:0px 1px 0px #528ecc;
+  margin: 10px;
 }
 .submitButton:hover {
 	background:linear-gradient(to bottom, #80b5ea 5%, #bddbfa 100%);
