--- a/src/App.css
+++ b/src/App.css
@@ -156,7 +156,23 @@ input {
 	position:relative;
 	top:1px;
 }
-
+:root {
+  --borderWidth: 7px;
+  --height: 24px;
+  --width: 12px;
+  --borderColor: #78b13f;
+}
+/* @media only screen and (max-width: 600px) {
+  .addButton {
+    display: inline-block;
+    transform: rotate(45deg);
+    height: var(--height);
+    width: var(--width);
+    border-bottom: var(--borderWidth) solid var(--borderColor);
+    border-right: var(--borderWidth) solid var(--borderColor);
+  }
+ 
+} */
 .editButton {
 	box-shadow:inset 0px 1px 0px 0px #d9fbbe;
 	background:linear-gradient(to bottom, #b8e356 5%, #a5cc52 100%);
