--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  position: responsive;
 }
 
 .App-logo {
@@ -15,6 +16,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+
 }
 
 .App-link {
@@ -36,6 +38,7 @@
   -ms-transform: translateZ(0);
   transform: translateZ(0);
 }
+
 @-webkit-keyframes load4 {
   0%,
   100% {
@@ -93,19 +96,68 @@
 
 /* Include the padding and border in an element's total width and height */
 * {
-  box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+body {
+  margin:0;
+  padding:0;
+  font-family: 'Roboto Slab', serif;
+  }
+  .wrapper {
+    display: inline-block;
+
+    width: 250px;
+    padding: 5px;
+    margin: 5px;
+    
+  }
+  
+  .wrapper img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+  }
+
+  label {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    margin-bottom: 0;
+  }
+div#envelope{
+  width: 55%;
+  margin: 10px 30% 10px 25%;
+  padding:10px 0;
+  border: 2px solid gray;
+  border-radius:10px;
+  }
+
+.responsive-container {
+  position: relative;
+  width: 100%;
+  }
+
+.inputType{
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
 }
 /* Style the close button */
 .close {
   cursor: pointer;
   position: absolute;
-  top: 50%;
-  right: 0%;
+  top: 20px;
+  right: 10px;
   padding: 12px 16px;
   transform: translate(0%, -50%);
 }
 
 .close:hover {background: #bbb;}
+
 
 /* Style the header */
 .header {
@@ -121,15 +173,13 @@
   display: table;
   clear: both;
 }
-
-/* Style the input */
-input {
+input[type=text]{
   margin: 0;
   border: none;
   border-radius: 6px;
   padding: 10px;
   font-size: 16px;
-}
+  }
 
 .addButton {
 	box-shadow:inset 0px 1px 0px 0px #efdcfb;
@@ -156,23 +206,6 @@ input {
 	position:relative;
 	top:1px;
 }
-:root {
-  --borderWidth: 7px;
-  --height: 24px;
-  --width: 12px;
-  --borderColor: #78b13f;
-}
-/* @media only screen and (max-width: 600px) {
-  .addButton {
-    display: inline-block;
-    transform: rotate(45deg);
-    height: var(--height);
-    width: var(--width);
-    border-bottom: var(--borderWidth) solid var(--borderColor);
-    border-right: var(--borderWidth) solid var(--borderColor);
-  }
- 
-} */
 .editButton {
 	box-shadow:inset 0px 1px 0px 0px #d9fbbe;
 	background:linear-gradient(to bottom, #b8e356 5%, #a5cc52 100%);
@@ -265,6 +298,7 @@ ul li:hover {
   width: 60px;
   height: 34px;
   display: block;
+  top:20pxpx;
 }
 
 .switch input { 
@@ -329,4 +363,34 @@ input:checked + .slider:before {
   align-items: center;
   justify-content: center;
   position: relative;
+}
+
+@media only screen and (max-width: 640px) {
+  
+  
+  .addButton {
+    box-shadow:inset 0px 1px 0px 0px #efdcfb;
+    background:linear-gradient(to bottom, #fabde3 5%, #cc48a0 100%);
+    background-color:#c2179d;
+    border-radius:6px;
+    border:1px solid #eb7db0;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:15px;
+    font-weight:bold;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #c7198d;
+    margin: 10px;
+  }
+  .addButton:hover {
+    background:linear-gradient(to bottom, #ea8092 5%, #da5db4 100%);
+    background-color:#e083cc;
+  }
+  .addButton:active {
+    position:relative;
+    top:1px;
+  }
 }
