--- a/src/App.scss
+++ b/src/App.scss
@@ -181,7 +181,7 @@ input[type=text]{
   font-size: 16px;
   }
 
-.addButton {
+/* .addButton {
 	box-shadow:inset 0px 1px 0px 0px #efdcfb;
 	background:linear-gradient(to bottom, #fabde3 5%, #cc48a0 100%);
 	background-color:#c2179d;
@@ -205,7 +205,7 @@ input[type=text]{
 .addButton:active {
 	position:relative;
 	top:1px;
-}
+} */
 .editButton {
 	box-shadow:inset 0px 1px 0px 0px #d9fbbe;
 	background:linear-gradient(to bottom, #b8e356 5%, #a5cc52 100%);
@@ -365,32 +365,51 @@ input:checked + .slider:before {
   position: relative;
 }
 
-@media only screen and (max-width: 640px) {
-  
-  
-  .addButton {
-    box-shadow:inset 0px 1px 0px 0px #efdcfb;
-    background:linear-gradient(to bottom, #fabde3 5%, #cc48a0 100%);
-    background-color:#c2179d;
-    border-radius:6px;
-    border:1px solid #eb7db0;
-    display:inline-block;
-    cursor:pointer;
-    color:#ffffff;
-    font-family:Arial;
-    font-size:15px;
-    font-weight:bold;
-    padding:6px 24px;
-    text-decoration:none;
-    text-shadow:0px 1px 0px #c7198d;
-    margin: 10px;
+
+.addButton {
+  box-shadow:inset 0px 1px 0px 0px #efdcfb;
+  background:linear-gradient(to bottom, #fabde3 5%, #cc48a0 100%);
+  background-color:#c2179d;
+  border-radius:6px;
+  border:1px solid #eb7db0;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:15px;
+  font-weight:bold;
+  padding:6px 24px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #c7198d;
+  margin: 10px;
+
+  .addButtonText{
+    display: none;
   }
-  .addButton:hover {
+  
+  .addButtonIcon{
+    display: block;
+  }
+
+  &:hover{
     background:linear-gradient(to bottom, #ea8092 5%, #da5db4 100%);
     background-color:#e083cc;
   }
-  .addButton:active {
+
+  &:active{
     position:relative;
     top:1px;
   }
 }
+
+@media (min-width: 768px) {  
+  .addButton {
+    .addButtonText{
+      display: block;
+    }
+    .addButtonIcon{
+      display: none;
+    }
+  }
+}
+
