--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  position: responsive;
+  position: relative;
 }
 
 .App-logo {
@@ -21,6 +21,15 @@
 
 .App-link {
   color: #09d3ac;
+}
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: rgba(0,0,0,0.5); /*dim the background*/
 }
 
 .Loader {
@@ -106,6 +115,7 @@ body {
   padding:0;
   font-family: 'Roboto Slab', serif;
   }
+  
   .wrapper {
     display: inline-block;
 
