Loading Spinner Center.Allow whitespaces in Edit Item.

--- a/src/App.scss
+++ b/src/App.scss
@@ -35,7 +35,8 @@
 .Loader {
   color: #ff00ff;
   font-size: 20px;
-  margin: 100px auto;
+  margin-top: 300px;
+  margin-left: 550px;
   width: 1em;
   height: 1em;
   border-radius: 50%;
