--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,19 @@
+@media (min-width: 768px) {  
 .App {
   text-align: center;
+  margin-left: 200px;
+  margin-right: 200px;
   position: relative;
 }
+}
+
+@media (max-width: 768px) {  
+  .App {
+    text-align: center;
+    position: relative;
+  }
+  }
+
 
 .App-logo {
   height: 40vmin;
@@ -35,8 +47,8 @@
 .Loader {
   color: #ff00ff;
   font-size: 20px;
-  margin-top: 300px;
-  margin-left: 550px;
+  margin-top: 15%;
+  margin-left: 50%;
   width: 1em;
   height: 1em;
   border-radius: 50%;
@@ -191,32 +203,6 @@ input[type=text]{
   padding: 10px;
   font-size: 16px;
   }
-
-/* .addButton {
-	box-shadow:inset 0px 1px 0px 0px #efdcfb;
-	background:linear-gradient(to bottom, #fabde3 5%, #cc48a0 100%);
-	background-color:#c2179d;
-	border-radius:6px;
-	border:1px solid #eb7db0;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:15px;
-	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-  text-shadow:0px 1px 0px #c7198d;
-  margin: 10px;
-}
-.addButton:hover {
-	background:linear-gradient(to bottom, #ea8092 5%, #da5db4 100%);
-	background-color:#e083cc;
-}
-.addButton:active {
-	position:relative;
-	top:1px;
-} */
 .editButton {
 	box-shadow:inset 0px 1px 0px 0px #d9fbbe;
 	background:linear-gradient(to bottom, #b8e356 5%, #a5cc52 100%);
