Align Center the Form with cols

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 @media (min-width: 768px) {  
 .App {
   text-align: center;
-  margin-left: 200px;
-  margin-right: 200px;
+  // margin-left: 200px;
+  // margin-right: 200px;
   position: relative;
 }
 }
