--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,16 @@
 @media (min-width: 768px) {  
-.App {
-  text-align: center;
-  // margin-left: 200px;
-  // margin-right: 200px;
-  position: relative;
-}
-}
-
-@media (max-width: 768px) {  
   .App {
     text-align: center;
     position: relative;
   }
-  }
+}
 
+@media (max-width: 768px) {  
+    .App {
+      text-align: center;
+      position: relative;
+    }
+  }
 
 .App-logo {
   height: 40vmin;
@@ -28,7 +25,6 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-
 }
 
 .App-link {
@@ -121,7 +117,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-}
+  }
 
 body {
   margin:0;
@@ -129,26 +125,25 @@ body {
   font-family: 'Roboto Slab', serif;
   }
   
-  .wrapper {
-    display: inline-block;
-
-    width: 250px;
-    padding: 5px;
-    margin: 5px;
-    
-  }
+.wrapper {
+  display: inline-block;
+  width: 250px;
+  padding: 5px;
+  margin: 5px;
+}
   
-  .wrapper img {
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
-  }
+.wrapper img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
 
-  label {
-    text-overflow: ellipsis;
-    overflow: hidden;
-    margin-bottom: 0;
-  }
+label {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  margin-bottom: 0;
+}
+
 div#envelope{
   width: 55%;
   margin: 10px 30% 10px 25%;
@@ -169,6 +164,7 @@ div#envelope{
   border-radius: 4px;
   resize: vertical;
 }
+
 /* Style the close button */
 .close {
   cursor: pointer;
@@ -180,7 +176,6 @@ div#envelope{
 }
 
 .close:hover {background: #bbb;}
-
 
 /* Style the header */
 .header {
@@ -196,13 +191,15 @@ div#envelope{
   display: table;
   clear: both;
 }
+
 input[type=text]{
-  margin: 0;
+  margin: 10px;
   border: none;
   border-radius: 6px;
   padding: 10px;
   font-size: 16px;
   }
+
 .editButton {
 	box-shadow:inset 0px 1px 0px 0px #d9fbbe;
 	background:linear-gradient(to bottom, #b8e356 5%, #a5cc52 100%);
@@ -253,7 +250,6 @@ input[type=text]{
 	position:relative;
 	top:1px;
 }
-
 
 .data {
   border: 1px solid #ddd;
@@ -362,7 +358,6 @@ input:checked + .slider:before {
   position: relative;
 }
 
-
 .addButton {
   box-shadow:inset 0px 1px 0px 0px #efdcfb;
   background:linear-gradient(to bottom, #fabde3 5%, #cc48a0 100%);
@@ -446,7 +441,6 @@ input:checked + .slider:before {
   }
 }
 
-
 .dropdown {
   position: relative;
   display: inline-block;
@@ -474,3 +468,15 @@ input:checked + .slider:before {
 .dropdown:hover .dropdown-content {display: block;}
 
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+.horizontal-list {
+	min-width: 696px;
+	list-style: none;
+  padding-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+	}
+.horizontal-list li {
+		display: inline;
+	}
