--- a/src/App.scss
+++ b/src/App.scss
@@ -468,6 +468,30 @@ input:checked + .slider:before {
   align-items: center;
   justify-content: center;
   }
+
+  a:active {
+    color: yellow;
+  }
+  // a.horizontal-list:hover {background-color: yellow}
+  // a.horizontal-list:active {color: red;}
+  .pagination {
+    display: inline-block;
+  }
+  
+  .pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  .pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  .pagination a:hover:not(.active) {background-color: #ddd;}
+ 
   
 
   
