--- a/src/App.scss
+++ b/src/App.scss
@@ -470,29 +470,16 @@ input:checked + .slider:before {
   }
 
   a:active {
-    color: yellow;
+    background-color: yellow;
   }
   // a.horizontal-list:hover {background-color: yellow}
   // a.horizontal-list:active {color: red;}
-  .pagination {
-    display: inline-block;
-  }
-  
-  .pagination a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
-    text-decoration: none;
-  }
-  
-  .pagination a.active {
-    background-color: #4CAF50;
-    color: white;
-  }
-  
-  .pagination a:hover:not(.active) {background-color: #ddd;}
+
  
-  
+  .number{
+    text-overflow: ellipsis;
+  overflow: hidden;
+  }
 
   
 
