--- a/src/App.scss
+++ b/src/App.scss
@@ -208,6 +208,13 @@ input[type=text]{
 	text-decoration:none;
 	text-shadow:0px 1px 0px #86ae47;
 }
+.editButtonText{
+  display: none;
+}
+
+.editButtonIcon{
+  display: block;
+}
 .editButton:hover {
 	background:linear-gradient(to bottom, #a5cc52 5%, #b8e356 100%);
 	background-color:#a5cc52;
@@ -397,6 +404,17 @@ input:checked + .slider:before {
   }
 }
 
+@media (min-width: 768px) {  
+  .editButton {
+    .editButtonText{
+      display: block;
+    }
+    .editButtonIcon{
+      display: none;
+    }
+  }
+}
+
 .dropbtn {
   box-shadow:inset 0px 1px 0px 0px #efdcfb;
   background:linear-gradient(to bottom, #fabdf7 5%, #cc48c1 100%);
@@ -471,14 +489,6 @@ input:checked + .slider:before {
 
   a:active {
     background-color: yellow;
-  }
-  // a.horizontal-list:hover {background-color: yellow}
-  // a.horizontal-list:active {color: red;}
-
- 
-  .number{
-    text-overflow: ellipsis;
-  overflow: hidden;
   }
 
   
